--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "saytow-ticket",
+  "version": "1.0",
+  "description": "",
+  "main": "index.js",
+  "author": "saytow",
+  "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.3"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
+
